added post, put, and delete to library, pharmacy, and users
